--- a/CloneMasterDetail/CloneMasterDetail.UWP/CloneMasterDetail.UWP.csproj
+++ b/CloneMasterDetail/CloneMasterDetail.UWP/CloneMasterDetail.UWP.csproj
@@ -96,10 +96,14 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="InkCanvasMemoPage.xaml.cs">
+      <DependentUpon>InkCanvasMemoPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Renderers\MemoPageRenderer.cs" />
     <Compile Include="Renderers\UnderlineLabelRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -143,6 +147,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="InkCanvasMemoPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
