--- a/CloneMasterDetail/CloneMasterDetail.Android/CloneMasterDetail.Android.csproj
+++ b/CloneMasterDetail/CloneMasterDetail.Android/CloneMasterDetail.Android.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Renderers\UnderlineLabelRenderer.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\TextToSpeechImpl.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -134,6 +135,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\AndroidManifest.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Services\" />
   </ItemGroup>
   <Import Project="..\CloneMasterDetail\CloneMasterDetail.projitems" Label="Shared" Condition="Exists('..\CloneMasterDetail\CloneMasterDetail.projitems')" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
