--- a/CloneMasterDetail/CloneMasterDetail.UWP/CloneMasterDetail.UWP.csproj
+++ b/CloneMasterDetail/CloneMasterDetail.UWP/CloneMasterDetail.UWP.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renderers\MemoPageRenderer.cs" />
     <Compile Include="Renderers\UnderlineLabelRenderer.cs" />
+    <Compile Include="Services\TextToSpeechImpl.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
